--- a/src/vault_autopilot/_pkg/asyva/templates/password_policy_rule.jinja
+++ b/src/vault_autopilot/_pkg/asyva/templates/password_policy_rule.jinja
@@ -1,6 +1,6 @@
-rule "{{ rule.kind.lower() }}" {
+rule "charset" {
   charset = "{{ rule.charset }}"
-  {%- if rule.min_chars is not none %}
-  min-chars = 2
+  {%- if rule["min_chars"] is not none %}
+  min-chars = {{ rule["min_chars"] }}
   {%- endif %}
 }
