--- a/src/vault_autopilot/_pkg/asyva/templates/password_policy.jinja
+++ b/src/vault_autopilot/_pkg/asyva/templates/password_policy.jinja
@@ -1,4 +1,4 @@
-length = {{ policy.length }}
-{% for rule in policy.rules -%}
+length = {{ policy["length"] }}
+{%- for rule in policy["rules"] %}
 {% include "password_policy_rule.jinja" %}
-{% endfor %}
+{%- endfor %}
